bubba-backend (2.1~pre65) vincent hugo; urgency=low

  * Removed unused sub routines.

 -- PA Nilsson <pa@excito.com>  Thu, 21 Oct 2010 15:39:19 +0200

bubba-backend (2.1~pre64) vincent hugo; urgency=low

  * Easyfind updates 
  * 

 -- PA Nilsson <pa@excito.com>  Tue, 05 Oct 2010 12:07:11 +0200

bubba-backend (2.1~pre63) lucid; urgency=low

  * First draft of easyfind backend. 

 -- PA Nilsson <pa@excito.com>  Fri, 01 Oct 2010 15:03:26 +0200

bubba-backend (2.1~pre62) vincent hugo; urgency=low

  * Use right distributions. 

 -- Tor Krill <tor@excito.com>  Mon, 13 Sep 2010 11:07:42 +0200

bubba-backend (2.1~pre61) lucid; urgency=low

  * Don't reload apache when restoring config.
    (At least temporarily fixes: #1555) 

 -- Tor Krill <tor@excito.com>  Sun, 12 Sep 2010 23:30:51 +0200

bubba-backend (2.1~pre60) vincent hugo; urgency=low

  * Reload cups after add/remove printer 

 -- Tor Krill <tor@excito.com>  Thu, 09 Sep 2010 18:16:41 +0200

bubba-backend (2.1~pre59) vincent hugo; urgency=low

  * Update cups config 

 -- Tor Krill <tor@excito.com>  Thu, 09 Sep 2010 17:41:25 +0200

bubba-backend (2.1~pre58) vincent hugo; urgency=low

  * Really fixing constants. (Replace by variables)
    (Closes: #1544) 

 -- Tor Krill <tor@excito.com>  Tue, 07 Sep 2010 17:51:40 +0200

bubba-backend (2.1~pre57) vincent hugo; urgency=low

  * Fix constants from clashing with perl ones. 
    (Closes:  #1544) 

 -- Tor Krill <tor@excito.com>  Sun, 05 Sep 2010 23:00:29 +0200

bubba-backend (2.1~pre56) vincent hugo; urgency=low

  * Fixed easyfind update when changing WAN IP. (Closes: #1559)

 -- PA Nilsson <pa@excito.com>  Fri, 03 Sep 2010 20:48:13 +0200

bubba-backend (2.1~pre55) vincent hugo; urgency=low

  * Fix permissions on storage directory
  * Add timemachine flags on afp config
  * Change some occurrencies of bubba (More ones left)

 -- Tor Krill <tor@excito.com>  Tue, 31 Aug 2010 11:20:14 +0200

bubba-backend (2.1~pre54) vincent hugo; urgency=low
